--- a/8dec/Base.lproj/Main.storyboard
+++ b/8dec/Base.lproj/Main.storyboard
@@ -66,6 +66,14 @@
                                     <action selector="btn13Dec:" destination="BYZ-38-t0r" eventType="touchUpInside" id="SdM-Hy-erP"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JUH-Wx-mBz">
+                                <rect key="frame" x="138" y="546" width="100" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="14 dec / steg 1"/>
+                                <connections>
+                                    <action selector="btn14Dec:" destination="BYZ-38-t0r" eventType="touchUpInside" id="i1M-dv-KQ6"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
