--- a/8dec/Base.lproj/Main.storyboard
+++ b/8dec/Base.lproj/Main.storyboard
@@ -67,11 +67,19 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JUH-Wx-mBz">
-                                <rect key="frame" x="138" y="546" width="100" height="30"/>
+                                <rect key="frame" x="125" y="546" width="127" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="14 dec / steg 1"/>
+                                <state key="normal" title="14 dec / steg 1 &amp; 2"/>
                                 <connections>
                                     <action selector="btn14Dec:" destination="BYZ-38-t0r" eventType="touchUpInside" id="i1M-dv-KQ6"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gVt-Jz-9ad">
+                                <rect key="frame" x="133" y="595" width="97" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="15dec / Steg 1"/>
+                                <connections>
+                                    <action selector="btn15dec:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2ae-I6-OBf"/>
                                 </connections>
                             </button>
                         </subviews>
