--- a/8dec/Base.lproj/Main.storyboard
+++ b/8dec/Base.lproj/Main.storyboard
@@ -82,6 +82,14 @@
                                     <action selector="btn15dec:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2ae-I6-OBf"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Us1-Iz-Yay">
+                                <rect key="frame" x="142" y="280" width="91" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="16 dec/steg 1"/>
+                                <connections>
+                                    <action selector="btn16dec:" destination="BYZ-38-t0r" eventType="touchUpInside" id="JGl-zV-ZJw"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
